--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ URL: https://github.com/kapsner/mlr3learners.lightgbm
 BugReports: https://github.com/kapsner/mlr3learners.lightgbm/issues
 Encoding: UTF-8
 Copyright: Lorenz A. Kapsner
-Date: 2019-12-01
+Date: 2019-12-13
 VignetteBuilder: knitr
 biocViews: 
 Depends: 
@@ -25,13 +25,14 @@ Imports:
     R6,
     paradox,
     mlr3misc,
-    viridis,
     ggplot2,
-    mlr3
+    mlr3,
+    lightgbm.py (>= 0.0.0.9000)
 Suggests: 
     testthat,
     lintr,
     rmarkdown,
     qpdf,
     knitr
-RoxygenNote: 7.0.2
+Remotes:  
+    kapsner/lightgbm.py@master
