--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mlr3learners.lightgbm
-Title: Title goes here
+Title: mlr3: LightGBM learner
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Lorenz A.",
@@ -14,9 +14,8 @@ URL: https://github.com/kapsner/mlr3learners.lightgbm
 BugReports: https://github.com/kapsner/mlr3learners.lightgbm/issues
 Encoding: UTF-8
 Copyright: Lorenz A. Kapsner
-Date: 2019-12-13
+Date: 2019-12-14
 VignetteBuilder: knitr
-biocViews: 
 Depends: 
     R (>= 2.10)
 Imports: 
@@ -33,6 +32,7 @@ Suggests:
     lintr,
     rmarkdown,
     qpdf,
-    knitr
+    knitr,
+    mlbench
 Remotes:  
     kapsner/lightgbm.py@master
