--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ URL: https://github.com/kapsner/mlr3learners.lightgbm
 BugReports: https://github.com/kapsner/mlr3learners.lightgbm/issues
 Encoding: UTF-8
 Copyright: Lorenz A. Kapsner
-Date: 2019-12-16
+Date: 2019-12-18
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
@@ -30,6 +30,7 @@ Imports:
 Suggests: 
     testthat,
     lintr,
+    checkmate,
     rmarkdown,
     qpdf,
     knitr,
