--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: mlr3learners.lightgbm
-Title: mlr3: LightGBM learner
+Package: mlr3learners.lgbpy
+Title: mlr3: LightGBM learner using its python module
 Version: 0.0.1.9000
 Authors@R: 
     person(given = "Lorenz A.",
@@ -7,13 +7,13 @@ Authors@R:
            role = c("cre", "aut"),
            email = "lorenz.kapsner@gmail.com",
            comment = c(ORCID = "0000-0003-1866-860X"))
-Description: LightGBM functionality for mlr3 framework.
+Description: Brining the LightGBM functionality to the mlr3 framework using the lightgbm python module and reticulate.
 License: LGPL (>= 2.1)
 LazyData: true
-URL: https://github.com/kapsner/mlr3learners.lightgbm
-BugReports: https://github.com/kapsner/mlr3learners.lightgbm/issues
+URL: https://github.com/kapsner/mlr3learners.lgbpy
+BugReports: https://github.com/kapsner/mlr3learners.lgbpy/issues
 Encoding: UTF-8
-Date: 2019-12-19
+Date: 2019-12-20
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
@@ -34,6 +34,8 @@ Suggests:
     qpdf,
     knitr,
     mlbench,
-    mlr3viz
+    mlr3viz,
+    future,
+    mlr3tuning
 Remotes:  
     kapsner/lightgbm.py@master
