--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ LazyData: true
 URL: https://github.com/kapsner/mlr3learners.lgbpy
 BugReports: https://github.com/kapsner/mlr3learners.lgbpy/issues
 Encoding: UTF-8
-Date: 2019-12-21
+Date: 2019-12-23
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
@@ -33,11 +33,8 @@ Suggests:
     rmarkdown,
     qpdf,
     knitr,
-    mlbench,
-    mlr3viz (>= 0.1.0.9000),
     future,
     mlr3tuning
 Remotes: 
-    kapsner/lightgbm.py@master,
-    mlr-org/mlr3viz
-RoxygenNote: 7.0.1
+    kapsner/lightgbm.py@master
+RoxygenNote: 7.0.2
