--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3learners.lgbpy
 Title: mlr3: LightGBM learner using its python module
-Version: 0.0.1.9001
+Version: 0.0.1.9003
 Authors@R: 
     person(given = "Lorenz A.",
            family = "Kapsner",
@@ -8,12 +8,12 @@ Authors@R:
            email = "lorenz.kapsner@gmail.com",
            comment = c(ORCID = "0000-0003-1866-860X"))
 Description: Brining the LightGBM functionality to the mlr3 framework using the lightgbm python module and reticulate.
-License: LGPL (>= 2.1)
+License: LGPL-3
 LazyData: true
 URL: https://github.com/kapsner/mlr3learners.lgbpy
 BugReports: https://github.com/kapsner/mlr3learners.lgbpy/issues
 Encoding: UTF-8
-Date: 2019-12-23
+Date: 2020-01-03
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
@@ -25,7 +25,7 @@ Imports:
     mlr3misc,
     ggplot2,
     mlr3,
-    lightgbm.py (>= 0.0.0.9000)
+    lightgbm.py (>= 0.0.1.9003)
 Suggests: 
     testthat,
     lintr,
