added support for weights; added early stopping vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3learners.lgbpy
 Title: mlr3: LightGBM learner using its python module
-Version: 0.0.2
+Version: 0.0.2.9001
 Authors@R: 
     person(given = "Lorenz A.",
            family = "Kapsner",
@@ -13,7 +13,7 @@ LazyData: true
 URL: https://github.com/kapsner/mlr3learners.lgbpy
 BugReports: https://github.com/kapsner/mlr3learners.lgbpy/issues
 Encoding: UTF-8
-Date: 2020-01-16
+Date: 2020-02-02
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
@@ -25,7 +25,7 @@ Imports:
     mlr3misc,
     ggplot2,
     mlr3,
-    lightgbm.py (>= 0.0.1.9003)
+    lightgbm.py (>= 0.0.1.9004)
 Suggests: 
     testthat,
     lintr,
@@ -35,5 +35,6 @@ Suggests:
     knitr,
     future,
     mlr3tuning
-Remotes:  
+Remotes: 
     kapsner/lightgbm.py@master
+RoxygenNote: 7.0.2
