--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("cre", "aut"),
            email = "lorenz.kapsner@gmail.com",
            comment = c(ORCID = "0000-0003-1866-860X"))
-Description: Brining the LightGBM functionality to the mlr3 framework using the lightgbm python module and reticulate.
+Description: Brings the LightGBM functionality to the mlr3 framework using the lightgbm python module and reticulate.
 License: LGPL-3
 LazyData: true
 URL: https://github.com/kapsner/mlr3learners.lgbpy
